assets/src/scss/_7_pages/_index.scss
.main {
    display: flex;
    flex-direction: column;
    @include breakpoint(large) {
    flex-direction: row;
    
    }
    &--content {

        flex-grow: 2;
        display: flex;
        flex-direction:column;
        margin-top: 30px;

        @include breakpoint(large) {
        margin: 50px 30px 15px 0;
        width: 1150px;
        }

        &_image {
            width: 340px;
            height: 300px;
            background-image: url('../../images/image-web-3-mobile.jpg');
            background-size: cover;
            background-repeat:none;

            @include breakpoint(portrait) {
                background-image: url("../../images/image-web-3-desktop.jpg");
                width: auto;
            }

            @include breakpoint(large) {
            height: 350px;
            width: 820px;
            }
        }

        &_text {
            

            @include breakpoint(large) {
            display: flex;
            flex-direction:row;
            column-gap: 30px;
            }

            h1 {
                @include inter-extra;
                color: $Very-dark-blue;
                font-size: 48px;
                margin-bottom: 0;

                @include breakpoint(large) {
                @include h1;
                flex-grow: 2;
                margin-top: 25px;
                }
                
            }

            div {
                flex-grow: 1;

                @include breakpoint(large) {
                margin-top: 20px;
                margin-left: 55px;
                }

                p {
                    line-height: 2;
                    margin-bottom: 20px;

                    @include breakpoint(large) {
                    margin-bottom: 60px;
                    }
                }

                button {
                    background-color: $soft-red;
                    border-radius: 0;
                    border: none;
                    color: $Off-white;
                    padding: 15px 45px;
                    text-transform: uppercase;
                    font-family: $inter;
                    font-stretch: expanded;
                    letter-spacing: 6px;

                    &:hover {
                        background-color: $Very-dark-blue;
                    }
                }
            }
        }
    }

    &--new {
        margin: 60px -2px 25px;
        padding: 0px 25px;
        flex-grow: 1;
        background-color: black;
        line-height: 1.5;

        @include breakpoint(large) {
            margin-top: 50px;
        }

        hr {
            border-top: 1px solid $Grayish-blue;
        }

        h2 {
            color: $soft-orange;
            @include h2;

            @include breakpoint(large){
                font-size: 2.5em;
            }
        }

        a {
            @include h4;
            text-decoration: none;
            margin-bottom: 0;
            color: $Off-white;

            &:hover {
                color: $soft-orange;
            }
           
        }

        p {
            color: $Grayish-blue;
        }

    }
}

.featured {
    display: flex;
    flex-direction: column;
    height: 150px;
    margin-bottom: 50px;
    row-gap: 40px;

    @include breakpoint(large) {
        flex-direction: row;
        margin-top: 60px;
        justify-content: space-between;
    }

    div {
        display: flex;
        flex-direction: row;

        column-gap: 20px;

        img {
            height: 150px;
        }
        @include breakpoint(large) {
            max-width: 350px;
        }

        div {
            display: flex;
            flex-direction: column;


            h2, a {
                margin: 0 0 15px;
            }

            h2 {
                @include h2;
                color: $Grayish-blue;
            }

            a {
                @include h4;
                color: $Dark-grayish-blue;
                text-decoration: none;

                &:hover {
                    color: $soft-red;
                }

                @include breakpoint(large) {
                    font-size: 1.2em;
                }
            }
        }

    }
}

